[gd_scene load_steps=9 format=3 uid="uid://cy8knnlpvfoql"]

[ext_resource type="Script" path="res://Objects/fire_work.gd" id="1_luuc0"]
[ext_resource type="Material" uid="uid://dxte6x22e0est" path="res://Materials/Shaders/fire_work_particle_shader.tres" id="2_f8lgp"]
[ext_resource type="Shader" path="res://Materials/Shaders/fire_work_trail_material.gdshader" id="3_bdn52"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fi2qr"]
direction = Vector3(0, 1, 0)
spread = 73.13
initial_velocity_min = 2.0
initial_velocity_max = 10.0
angle_max = 90.0

[sub_resource type="BoxMesh" id="BoxMesh_aseaw"]
material = ExtResource("2_f8lgp")
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_olv65"]
render_priority = 0
shader = ExtResource("3_bdn52")
shader_parameter/albedo = Color(0.705882, 0.447059, 0.0509804, 1)
shader_parameter/metallic = 0.0
shader_parameter/metallic_texture_channel = Plane(1, 0, 0, 0)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/specular = 0.5
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qpll7"]
emission_shape = 1
emission_sphere_radius = 0.5
direction = Vector3(0, -1, 0)
spread = 7.5
initial_velocity_min = 5.0
initial_velocity_max = 25.0
angular_velocity_max = 225.0
turbulence_enabled = true
turbulence_noise_scale = 1.71

[sub_resource type="BoxMesh" id="BoxMesh_nwtrd"]
size = Vector3(0.2, 0.2, 0.2)

[node name="FireWork" type="Node3D"]
script = ExtResource("1_luuc0")

[node name="ExplosionParticlesGPU" type="GPUParticles3D" parent="."]
emitting = false
amount = 55
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_fi2qr")
draw_pass_1 = SubResource("BoxMesh_aseaw")

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true

[node name="TrailParticleGPU" type="GPUParticles3D" parent="."]
material_override = SubResource("ShaderMaterial_olv65")
emitting = false
amount = 25
randomness = 0.38
process_material = SubResource("ParticleProcessMaterial_qpll7")
draw_pass_1 = SubResource("BoxMesh_nwtrd")

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
